default/jackett/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  selector:
    app: jackett
  ports:
    - protocol: TCP
      port: 9117
      targetPort: 9117
